@@ -19,11 +19,10 @@ def pytest_addoption(parser):
 def pytest_configure(config):
     config._setupstate = SetupState()
 
-def pytest_sessionfinish(session, exitstatus, excrepr=None):
+def pytest_sessionfinish(session, exitstatus):
     # XXX see above
     if hasattr(session.config, '_setupstate'):
         session.config._setupstate.teardown_all()
-
     # prevent logging module atexit handler from choking on 
     # its attempt to close already closed streams 
     # see http://bugs.python.org/issue6333
